verificação de login, e login funcionando.
A verificação de login, está funcionando de acordo como deveria

--- a/app/view/menu.html
+++ b/app/view/menu.html
@@ -22,5 +22,6 @@
         </li>
       </ul>
     </div>
+    <button type="button" id="btn_menu_sair" class="btn btn-danger col-md-0,1">Sair</button>
   </div>
 </nav>
