--- a/app/view/home.html
+++ b/app/view/home.html
@@ -4,6 +4,21 @@
 
 {{ titulo }}
 
+<div class="col-12">
+    <br><label for="">Temperatura:</label>
+    <div class="d-none d-lg-block"id="temperatura">juninn</div>
+    <div class="d-lg-none" id="temperatura">juninn</div>
+    
+    <label for="">Umidade:</label>
+    <div class="d-none d-lg-block" id="umidade">junin4n</div>
+    <div class="d-lg-none "id="umidade">juninn</div>
+    <br>
+    <button type="button" class="btn btn-success">Ligar</button>
+    <button type="button" class="btn btn-danger">Desligar</button>
+
+</div>
+
+
 {% endblock %}
 {% block script %}
 {% include "script.html" %}
