--- a/app/view/home.html
+++ b/app/view/home.html
@@ -4,17 +4,14 @@
 
 {{ titulo }}
 
-<div class="col-12">
-    <br><label for="">Temperatura:</label>
-    <div class="d-none d-lg-block" id="temperatura">juninn</div>
-    <div class="d-lg-none" id="temperatura">juninn</div>
+<div class="container">
+    <br><label for="">Umidade:</label>
+    <div class="d-none d-lg-block" id="visor">juninn</div>
+    <div class="d-lg-none" id="visor">juninn</div>
 
-    <label for="">Umidade:</label>
-    <div class="d-none d-lg-block" id="umidade">junin4n</div>
-    <div class="d-lg-none " id="umidade">juninn</div>
     <br>
     <button type="button" class="btn btn-success" id="poweron">Ligar</button>
-    <button type="button" class="btn btn-danger">Desligar</button>
+    <button type="button" class="btn btn-danger" id="poweroff">Desligar</button>
 
 </div>
 
